<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homenet Pi</string>
    <string name="action_settings">Settings</string>
    <string name="ip">IP Address</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string-array name="tab">
        <item >CCTV Module</item>
        <item >Temp Monitor</item>
        <item >Light Controller</item>
        <item >Comming Soon</item>
    </string-array>
        <string name="movie">movie</string>
        <string name="picture">picture</string>
        <string-array name="setting">
            <item >적외선 센서</item>
            <item >사운드 센서</item>
        </string-array>
        <string name="startMovie">Watch my room</string>
        <string name="startPicture">사진 보기</string>
        <string name="alert">신고</string>
        <string-array name="Icon_Array">
            <item >icon</item>
            <item >icon</item>
        </string-array>
        <string-array name="sensorTab">
            <item >센서 설정</item>
        </string-array>
        <string name="passwdStore">Save IP &amp; password</string>
        <string name="passWdChange">Change P/W</string>
        <string name="previousPass">Old Password</string>
        <string name="newPass">New Password</string>
        <string name="againPass">Comfirm New Password</string>
        <string name="CCTV">CCTV Module</string>
        <string name="Temp">Temp Monitor</string>
        <string name="Light">Light Controller</string>

</resources>
